--- a/网络设备漏洞/启明星辰 天清汉马USG防火墙 逻辑缺陷漏洞 CNVD-2021-12793.md
+++ b/网络设备漏洞/启明星辰 天清汉马USG防火墙 逻辑缺陷漏洞 CNVD-2021-12793.md
@@ -1,8 +1,8 @@
-# 启明星辰 天清汉马USG防火墙 逻辑缺陷漏洞
+# 启明星辰 天清汉马USG防火墙 逻辑缺陷漏洞 CNVD-2021-12793
 
 ## 漏洞描述
 
-启明星辰 天清汉⻢USG防⽕墙 存在逻辑缺陷漏洞，攻击者通过账号密码可以进入后台后更改任意用户权限升级为管理员
+启明星辰 天清汉⻢USG防⽕墙 存在逻辑缺陷漏洞，攻击者通过账号密码可以进入后台后更改任意用户权限升级为管理员。
 
 ## 漏洞影响
 
